--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,6 +5,6 @@ main:
   - title: "Publications"
     url: https://scholar.google.com/citations?user=rm6fU00AAAAJ&hl=en
   - title: "Contact "
-    url: https://aidantay.github.io/contact/docs/quick-start-guide/
+    url: /contact
 
 
